@@ -1,4 +1,6 @@
 # Generated by roxygen2 (4.0.1): do not edit by hand
 
 export(lire)
+export(lireInteractif)
 import(compiler)
+import(shiny)
