@@ -1,0 +1,11 @@
+% Generated by roxygen2 (4.0.1): do not edit by hand
+\name{lireInteractif}
+\alias{lireInteractif}
+\title{Version interactive de la fonction \code{lire}}
+\usage{
+lireInteractif()
+}
+\description{
+Cette fonction lance une application shiny qui permet d'utiliser de manière interactive la fonction \code{lire}.
+}
+
